--- a/index.html
+++ b/index.html
@@ -181,10 +181,10 @@
     <div class="gtranslate_wrapper"></div>
     <script src="assets/javaScript/botãoWhatsapp.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script>window.gtranslateSettings = {"default_language":"pt","languages":["pt","es","en"],"wrapper_selector":".gtranslate_wrapper","alt_flags":{"en":"usa","pt":"brazil","es":"argentina"}}</script>
-    <script src="https://cdn.gtranslate.net/widgets/latest/float.js" defer></script>
+    <script>window.gtranslateSettings = {"default_language":"pt","native_language_names":true,"languages":["pt","es","en"],"wrapper_selector":".gtranslate_wrapper","alt_flags":{"en":"usa","pt":"brazil","es":"colombia"}}</script>
+    <script src="assets/javaScript/tradução.js" defer></script>
     <script src="assets/javaScript/scrollPage.js"></script>
     <script src="assets/javaScript/nav.js"></script>
-    <script src="/assets/javaScript/gallery.js"></script>
+    <script src="assets/javaScript/gallery.js"></script>
    </body>
 </html>
