--- a/index.html
+++ b/index.html
@@ -168,7 +168,8 @@
             </div>
         </div>
         <div id="credits">
-            <p>&copy; 2024 Vila Sal Boutique Noronha LTDA | Desenvolvido por <a href="https://github.com/MyDevVinicius">Vinicius Nascimento</a></p>
+            <p>&copy; 2024 Vila Sal Boutique Noronha LTDA </p>
+            <!--Desenvolvido por <a href="https://github.com/MyDevVinicius">Vinicius Nascimento</a>-->
         </div>
         </footer>
       </main>
