--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 </div>
                 <div class="box-services">
                     <img src="assets/icons/almoço.webp" alt="" srcset="">
-                    <p>Lorário de funcionamento
+                    <p>Horário de funcionamento
                         das 07h00 às 21h00</p>
                 </div>
                 <div class="box-services">
