--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="box-card">
                 <div class="cards">
                     <div class="img-card">
-                        <img src="assets/img/VilaSal.webp" alt="" srcset="" width="150" height="70">
+                        <img src="assets/img/VilaSal.webp" alt="logo vilaSal" srcset="" width="150" height="70">
                     </div>
                     <div>
                         <p>Conforto e aconchego sem abrir mão da nossa
@@ -60,7 +60,7 @@
                 </div>
                 <div class="cards">
                     <div class="img-card">
-                        <img src="assets/img/VilaSalBoutique.webp" alt="" srcset="" width="250" height="70">
+                        <img src="assets/img/VilaSalBoutique.webp" alt="logo vilasalboutique" srcset="" width="250" height="70">
                     </div>
                     <div>
                         <p>Um espaço especial para ser o seu refúgio em
@@ -80,41 +80,41 @@
 
         <section id="sobreServicos">
             <div class="text-service">
-                <h3>Serviços</h3>
+                <h2>Serviços</h2>
             </div> 
             <div class="services">
                 <div class="box-services">
-                    <img src="assets/icons/recepcao.webp" alt="" srcset="">
+                    <img src="assets/icons/recepcao.webp" alt="ícone recepção" srcset="">
                     <p>Informações, dicas, reservas
                         e agendamento de passeios</p>
                 </div>
                 <div class="box-services">
-                    <img src="assets/icons/xicara-de-cafe.webp" alt="" srcset="">
+                    <img src="assets/icons/xicara-de-cafe.webp" alt="ícone xicara de cafe" srcset="">
                     <p>Café da manhã das
                         07h30 às 10h00</p>
                 </div>
                 <div class="box-services">
-                    <img src="assets/icons/almoço.webp" alt="" srcset="">
+                    <img src="assets/icons/almoço.webp" alt="ícone almoço" srcset="">
                     <p>Horário de funcionamento
                         das 07h00 às 21h00</p>
                 </div>
                 <div class="box-services">
-                    <img src="assets/icons/sinal-wifi.webp" alt="" srcset="">
+                    <img src="assets/icons/sinal-wifi.webp" alt="ícone wifi" srcset="">
                     <p>Wi-fi gratuito
                         (velocidade instável)</p>
                 </div>
                 <div class="box-services">
-                    <img src="assets/icons/ocupado.webp" alt="" srcset="">
+                    <img src="assets/icons/ocupado.webp" alt="ícone ocupado" srcset="">
                     <p>Serviço de quarto diário: basta
                         deixar a notificação na porta</p>
                 </div>
                 <div class="box-services">
-                    <img src="assets/icons/ponto-de-onibus.webp" alt="" srcset="">
+                    <img src="assets/icons/ponto-de-onibus.webp" alt="ícone de onibus" srcset="">
                     <p>Transfer free:
                         aeroporto – pousada</p>
                 </div>
                 <div class="box-services">
-                    <img src="assets/icons/piscina.webp" alt="" srcset="">
+                    <img src="assets/icons/piscina.webp" alt="ícone de piscina" srcset="">
                     <p>Piscina (horário de funcionamento
                         das 09h00 às 21h00)</p>
                 </div>
@@ -123,7 +123,7 @@
 
         <section id="fotos-posada" >
             <div class="logo-escura">
-                <img src="assets/img/logo escura.webp" alt="" srcset="">
+                <img src="assets/img/logo escura.webp" alt="logo-escura" srcset="">
             </div>
             <div><p>
                 A Vila Sal Noronha tem o conforto e a tranquilidade que você precisa para aproveitar o melhor do paraíso de belezas naturais que é Fernando de Noronha.
@@ -152,19 +152,19 @@
                 <img src="assets/img/logo.webp" alt="logo" srcset="">
             </div>
             <div class="box-footer">
-                <h4>Vila Sal Boutique</h4><br>
+                <h3>Vila Sal Boutique</h3><br>
                 <p>Endereço: Rua Amaro Preto, n°489 , Floresta velha, Fernando de Noronha | PE / CEP: 53.990-000</p>
             </div>
             <div class="box-footer">
-                <h4>Fale com a Gente</h4><br>
+                <h3>Fale com a Gente</h3><br>
                 <p><a href="mailto:reservas@vilasalboutique.com"> reservas@vilasalboutique.com </a></p>
                 <p>telefone: (81) 9 8417-7483</p>
             </div>
             <div class="box-footer ">
                 <h4>Siga nas redes sociais</h4><br>
-              <a href="http://"><img src="assets/icons/facebook.webp" alt="" srcset=""></a>
-              <a href="http://"><img src="assets/icons/instagram.webp" alt="" srcset=""></a>
-              <a href="http://"><img src="assets/icons/linkedin.webp" alt="" srcset=""></a>
+              <a href="http://"><img src="assets/icons/facebook.webp" alt="ícone do facebook" srcset=""></a>
+              <a href="http://"><img src="assets/icons/instagram.webp" alt="ícone do instagram" srcset=""></a>
+              <a href="http://"><img src="assets/icons/linkedin.webp" alt="ícone do linkedin" srcset=""></a>
             </div>
         </div>
         <div id="credits">
@@ -178,10 +178,11 @@
             <img src="assets/icons/cookies.webp" alt="imagem de cookie" srcset=""><span>Atenção Importante !</span>
         </div>
         <div class="cookies-txt">
-        <p>Este site usa cookies e tecnologias afins, que são pequenos arquivos ou trechos de texto baixados para um aparelho quando o visitante acessa um site ou app. Ao utlizar nosso site você está de acordo com a utilização dos cookies para te proporcionar uma melhor experiência.</p>
+        <p>Utilizamos cookies para analisar e personalizar conteúdos e anúncios em nossa plataforma e em serviços de terceiros.
+             Ao navegar no site, você nos autoriza a coletar e usar essas informações. Você pode alterar isso a qualquer tempo..</p>
         
         <div class="cookies-btn">
-          <button onclick="aceito()">Clique para Aceitar</button>
+          <button onclick="aceito()">Ok, Entendi</button>
         </div>
           </div>
       </div>
