--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
           <ul class="nav-list">
             <li><a href="#Inicio">Início</a></li>
             <li><a href="#servicos">Serviços</a></li>
-            <li><a href="vilaSal.html">Vila Sal </a></li>
-            <li><a href="vilaSalBoutique.html">Vila Sal Boutique</a></li>
-            <li><a href="sobre.html">Sobre</a></li>
+            <li><a href="assets/pages/vilaSal.html">Vila Sal </a></li>
+            <li><a href="assets/pages/vilaSalBoutique.html">Vila Sal Boutique</a></li>
+            <li><a href="assets/pages/sobre.html">Sobre</a></li>
           </ul>
         </nav>
       </header>
