--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
              coletar dados sobre como os visitantes interagem com o nosso site e serviços.
               Ao clicar em "Aceitar", você concorda
              em usarmos todos os cookies para publicidade, análises e suporte. 
-             Para mais informações, leia nossa <a href="politicas.html"><span>Politicas de Cookies</span></a></p>
+             Para mais informações, leia nossa <a href="assets/pages/politicas.html"><span>Politicas de Cookies</span></a></p>
         <div class="cookies-btn">
           <button onclick="aceito()">Ok, Entendi</button>
         </div>
