--- a/assets/pages/politicas.html
+++ b/assets/pages/politicas.html
@@ -15,7 +15,7 @@
 <div class="title-privacy">    
 <img src="/assets/img/logo.webp" alt="logocookies" srcset="">     
 <h1>Política Privacidade</h1>
-<a href="index.html"><button>Voltar</button></a>
+<a href="/index.html"><button>Voltar</button></a>
 </div> 
 <p>A sua privacidade é importante para nós. É política do Vila Sal Boutique respeitar
      a sua privacidade em relação a qualquer informação sua que possamos coletar no site
