update page about

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             </div>
         </section>
 
-        <section id="fotos-posada" >
+        4<section id="fotos-posada" >
             <div class="logo-escura">
                 <img src="assets/img/logo escura.webp" alt="logo-escura" srcset="">
             </div>
