--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             </div>
         </section>
 
-        4<section id="fotos-posada" >
+        <section id="fotos-posada" >
             <div class="logo-escura">
                 <img src="assets/img/logo escura.webp" alt="logo-escura" srcset="">
             </div>
@@ -143,7 +143,7 @@
                 <button class="button" onclick="mover(1)"><i class="fas fa-chevron-right"></i></button>
             </div>
             <div>
-                <a href="http://"><button>Saiba Mais</button></a>
+                <a href="assets/pages/sobre.html"><button>Saiba Mais</button></a>
             </div>
         </section>
 
