--- a/assets/pages/vilaSal.html
+++ b/assets/pages/vilaSal.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="SEU REFÚGIO EM FERNANDO DE NORONHA ... as opções de quarto Standard e Deluxe, que acomodam até duas pessoas. ... sinta-se em casa no Flat.">
-    <title>Vila Sal Boutique</title>
+    <title>Vila</title>
     
     <link rel="shortcut icon" href="/assets/img/logo escura.webp" type="image/x-icon">
     <link rel="stylesheet" href="/assets/css/style.css">
@@ -20,7 +20,7 @@
             <div class="line3"></div>
           </div>
           <ul class="nav-list">
-            <li><a href="#Inicio">Início</a></li>
+            <li><a href="/index.html">Início</a></li>
             <li><a href="#servicos">Serviços</a></li>
             <li><a href="/assets/pages/vilaSal.html">Vila Sal </a></li>
             <li><a href="/assets/pages/vilaSalBoutique.html">Vila Sal Boutique</a></li>
@@ -70,12 +70,10 @@
                         </div>
 
                         <div id="carousel" class="carousel">
-                            <img src="/assets/img/foto1.webp" alt="Foto 1">
-                            <img src="/assets/img/foto2.webp" alt="Foto 2">
-                            <img src="/assets/img/foto3.webp" alt="Foto 3">
-                            <img src="/assets/img/foto4.webp" alt="Foto 4">
-                            <img src="/assets/img/foto5.webp" alt="Foto 5">
-                            <img src="/assets/img/foto6.webp" alt="Foto 6">
+                            <img src="/assets/img/deluxe1.webp" alt="Foto 1">
+                            <img src="/assets/img/deluxe2.webp" alt="Foto 2">
+                            <img src="/assets/img/deluxe3.webp" alt="Foto 3">
+                            <img src="/assets/img/deluxe4.webp" alt="Foto 4">
                           </div>
                           
                           <div class="buttons">
@@ -112,12 +110,12 @@
                             </div>
                         </div>
                         <div id="carousel" class="carousel">
-                            <img src="/assets/img/foto1.webp" alt="Foto 1">
-                            <img src="/assets/img/foto2.webp" alt="Foto 2">
-                            <img src="/assets/img/foto3.webp" alt="Foto 3">
-                            <img src="/assets/img/foto4.webp" alt="Foto 4">
-                            <img src="/assets/img/foto5.webp" alt="Foto 5">
-                            <img src="/assets/img/foto6.webp" alt="Foto 6">
+                            <img src="/assets/img/stan1.webp" alt="Foto 1">
+                            <img src="/assets/img/stan2.webp" alt="Foto 2">
+                            <img src="/assets/img/stan3.webp" alt="Foto 3">
+                            <img src="/assets/img/stan4.webp" alt="Foto 4">
+                            <img src="/assets/img/stan5.webp" alt="Foto 5">
+                            <img src="/assets/img/stan6.webp" alt="Foto 6">
                           </div>
                           <div class="buttons">
                             <button class="button" onclick="mover(-1)"><i class="fas fa-chevron-left"></i></button>
