--- a/assets/pages/sobre.html
+++ b/assets/pages/sobre.html
@@ -20,7 +20,7 @@
             <div class="line3"></div>
           </div>
           <ul class="nav-list">
-            <li><a href="#Inicio">Início</a></li>
+            <li><a href="/index.html">Início</a></li>
             <li><a href="#servicos">Serviços</a></li>
             <li><a href="/assets/pages/vilaSal.html">Vila Sal </a></li>
             <li><a href="/assets/pages/vilaSalBoutique.html">Vila Sal Boutique</a></li>
