--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         </p>
                     </div>
                     <div class="sub-button">
-                        <a href=""><button>CONHEÇA</button></a>
+                        <a href="/assets/pages/vilaSal.html"><button>CONHEÇA</button></a>
                         <a href="https://api.whatsapp.com/send?phone=5581984177483&text=Ol%C3%A1,%20tudo%20bem?%0AVim%20pelo%20Site%20..%0APode%20Realizar%20Minha%20Reserva%20?%0Atenho%20Preferencia%20pela%20(Vila%20Sal)"><button>RESERVAR</button></a>
                     </div>
                 </div>
@@ -72,7 +72,7 @@
                         </p>
                     </div>
                     <div class="sub-button">
-                        <a href=""><button>CONHEÇA</button></a>
+                        <a href="/assets/pages/vilaSalBoutique.html"><button>CONHEÇA</button></a>
                         <a href="https://api.whatsapp.com/send?phone=5581984177483&text=Ol%C3%A1,%20tudo%20bem?%0AVim%20pelo%20Site%20..%0APode%20Realizar%20Minha%20Reserva%20?%0Atenho%20Preferencia%20pela%20(Vila%20Sal%20Boutique)"><button>RESERVAR</button></a>
                     </div>
                 </div>
