--- a/assets/pages/vilaSal.html
+++ b/assets/pages/vilaSal.html
@@ -80,7 +80,7 @@
                             <button class="button" onclick="mover(1)"><i class="fas fa-chevron-right"></i></button>
                         </div>
                         <div class="btn-quarto">
-                            <a href=""><button>Reservar</button></a>
+                            <a href="https://api.whatsapp.com/send?phone=5581984177483&text=Ol%C3%A1,%20tudo%20bem?%0AVim%20pelo%20Site%20..%0APode%20Realizar%20Minha%20Reserva%20?%0Atenho%20Preferencia%20pela%20(Vila%20Sal%20Deluxe)"><button>Reservar</button></a>
                         </div>
                     </div>
                     <div id="Standard">
@@ -121,7 +121,7 @@
                             <button class="button" onclick="mover(1)"><i class="fas fa-chevron-right"></i></button>
                         </div>
                         <div class="btn-quarto">
-                            <a href="http://"><button>Reservar</button></a>
+                            <a href="https://api.whatsapp.com/send?phone=5581984177483&text=Ol%C3%A1,%20tudo%20bem?%0AVim%20pelo%20Site%20..%0APode%20Realizar%20Minha%20Reserva%20?%0Atenho%20Preferencia%20pela%20(Vila%20Sal%20Standard)"><button>Reservar</button></a>
                         </div>
                     </div>
                 </div>
