Diretorio de links

--- a/assets/pages/politicas.html
+++ b/assets/pages/politicas.html
@@ -5,17 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="SEU REFÚGIO EM FERNANDO DE NORONHA ... as opções de quarto Standard e Deluxe, que acomodam até duas pessoas. ... sinta-se em casa no Flat.">
     <title>Vila Sal Boutique</title>
-    <link rel="shortcut icon" href="/assets/img/logo escura.webp" type="image/x-icon">
-    <link rel="stylesheet" href="/assets/css/politicas.css">
+    <link rel="shortcut icon" href="../assets/img/logo escura.webp" type="image/x-icon">
+    <link rel="stylesheet" href="../assets/css/politicas.css">
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
  </head>
 
  <body>
 <main>
 <div class="title-privacy">    
-<img src="/assets/img/logo.webp" alt="logocookies" srcset="">     
+<img src="../assets/img/logo.webp" alt="logocookies" srcset="">     
 <h1>Política Privacidade</h1>
-<a href="/index.html"><button>Voltar</button></a>
+<a href="../index.html"><button>Voltar</button></a>
 </div> 
 <p>A sua privacidade é importante para nós. É política do Vila Sal Boutique respeitar
      a sua privacidade em relação a qualquer informação sua que possamos coletar no site
