--- a/assets/pages/vilaSalBoutique.html
+++ b/assets/pages/vilaSalBoutique.html
@@ -6,14 +6,14 @@
     <meta name="description" content="SEU REFÚGIO EM FERNANDO DE NORONHA ... as opções de quarto Standard e Deluxe, que acomodam até duas pessoas. ... sinta-se em casa no Flat.">
     <title>Boutique</title>
     
-    <link rel="shortcut icon" href="/assets/img/logo escura.webp" type="image/x-icon">
-    <link rel="stylesheet" href="/assets/css/style.css">
-    <link rel="stylesheet" href="/assets/css/responsive.css">
+    <link rel="shortcut icon" href="../img/logo escura.webp" type="image/x-icon">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/responsive.css">
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
  </head> 
     <header>
         <nav>
-            <img class="logo" src="/assets/img/logo.webp" alt="Logo da pousada" width="90" height="70">
+            <img class="logo" src="../img/logo.webp" alt="Logo da pousada" width="90" height="70">
           <div class="mobile-menu">
             <div class="line1"></div>
             <div class="line2"></div>
@@ -21,16 +21,16 @@
           </div>
           <ul class="nav-list">
             <li><a href="/index.html">Início</a></li>
-            <li><a href="/assets/pages/vilaSal.html">Vila Sal </a></li>
-            <li><a href="/assets/pages/vilaSalBoutique.html">Vila Sal Boutique</a></li>
-            <li><a href="/assets/pages/sobre.html">Sobre</a></li>
+            <li><a href="vilaSal.html">Vila Sal </a></li>
+            <li><a href="vilaSalBoutique.html">Vila Sal Boutique</a></li>
+            <li><a href="sobre.html">Sobre</a></li>
           </ul>
         </nav>
       </header>
       <main>
         <section id="vilasal-Inicio">
             <div>
-                <img src="/assets/img/logo.webp" alt="selo vila sal boutique" srcset="">
+                <img src="../img/logo.webp" alt="selo vila sal boutique" srcset="">
             </div>
         </section>
 
@@ -44,7 +44,7 @@
                 <div class="quartos">
                     <div id="Deluxe">
                         <h3>Flat</h3>
-                        <img src="/assets/img/flat-1.webp" alt="img-quarto-deluxe" srcset="">
+                        <img src="../img/flat-1.webp" alt="img-quarto-deluxe" srcset="">
                         <div class="colum-text">
                             <div class="text-1">
                                 <ul>
@@ -69,12 +69,12 @@
                         </div>
 
                         <div id="carousel" class="carousel">
-                            <img src="/assets/img/flat-1.webp" alt="Foto 1">
-                            <img src="/assets/img/flat2.webp" alt="Foto 2">
-                            <img src="/assets/img/flat3.webp" alt="Foto 3">
-                            <img src="/assets/img/flat4.webp" alt="Foto 4">
-                            <img src="/assets/img/flat5.webp" alt="Foto 5">
-                            <img src="/assets/img/flat6.webp" alt="Foto 6">
+                            <img src="../img/flat-1.webp" alt="Foto 1">
+                            <img src="../img/flat2.webp" alt="Foto 2">
+                            <img src="../img/flat3.webp" alt="Foto 3">
+                            <img src="../img/flat4.webp" alt="Foto 4">
+                            <img src="../img/flat5.webp" alt="Foto 5">
+                            <img src="../img/flat6.webp" alt="Foto 6">
                           </div>
                           
                           <div class="buttons">
@@ -87,7 +87,7 @@
                     </div>
                     <div id="Standard">
                         <h3>Quarto Luxo</h3>
-                        <img src="/assets/img/luxo.webp" alt="img-quarto-standard" srcset="">
+                        <img src="../img/luxo.webp" alt="img-quarto-standard" srcset="">
                         <div class="colum-text">
                             <div class="text-1">
                                 <ul>
@@ -111,11 +111,11 @@
                             </div>
                         </div>
                         <div id="carousel" class="carousel">
-                            <img src="/assets/img/luxo1.webp" alt="Foto 1">
-                            <img src="/assets/img/luxo2.webp" alt="Foto 2">
-                            <img src="/assets/img/luxo3.webp" alt="Foto 3">
-                            <img src="/assets/img/luxo4.webp" alt="Foto 4">
-                            <img src="/assets/img/luxo.webp" alt="Foto 5">
+                            <img src="../img/luxo1.webp" alt="Foto 1">
+                            <img src="../img/luxo2.webp" alt="Foto 2">
+                            <img src="../img/luxo3.webp" alt="Foto 3">
+                            <img src="../img/luxo4.webp" alt="Foto 4">
+                            <img src="../img/luxo.webp" alt="Foto 5">
                           </div>
                           <div class="buttons">
                             <button class="button" onclick="mover(-1)"><i class="fas fa-chevron-left"></i></button>
@@ -129,7 +129,7 @@
 
                     <div id="Standard">
                         <h3>Quarto Deluxe</h3>
-                        <img src="/assets/img/deluxe qurto.webp" alt="img-quarto-standard" srcset="">
+                        <img src="../img/deluxe qurto.webp" alt="img-quarto-standard" srcset="">
                         <div class="colum-text">
                             <div class="text-1">
                                 <ul>
@@ -153,11 +153,11 @@
                             </div>
                         </div>
                         <div id="carousel" class="carousel">
-                            <img src="/assets/img/deluxe qurto.webp" alt="Foto 1">
-                            <img src="/assets/img/deluxe1.webp" alt="Foto 2">
-                            <img src="/assets/img/deluxe2.webp" alt="Foto 3">
-                            <img src="/assets/img/deluxe3.webp" alt="Foto 4">
-                            <img src="/assets/img/deluxe4.webp" alt="Foto 5">
+                            <img src="../img/deluxe qurto.webp" alt="Foto 1">
+                            <img src="../img/deluxe1.webp" alt="Foto 2">
+                            <img src="../img/deluxe2.webp" alt="Foto 3">
+                            <img src="../img/deluxe3.webp" alt="Foto 4">
+                            <img src="../img/deluxe4.webp" alt="Foto 5">
                           </div>
                           <div class="buttons">
                             <button class="button" onclick="mover(-1)"><i class="fas fa-chevron-left"></i></button>
