--- a/assets/pages/sobre.html
+++ b/assets/pages/sobre.html
@@ -6,21 +6,21 @@
     <meta name="description" content="SEU REFÚGIO EM FERNANDO DE NORONHA ... as opções de quarto Standard e Deluxe, que acomodam até duas pessoas. ... sinta-se em casa no Flat.">
     <title>Vila Sal Boutique</title>
     
-    <link rel="shortcut icon" href="../assets/img/logo escura.webp" type="image/x-icon">
-    <link rel="stylesheet" href="../assets/css/style.css">
-    <link rel="stylesheet" href="../assets/css/responsive.css">
+    <link rel="shortcut icon" href="../img/logo escura.webp" type="image/x-icon">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/responsive.css">
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   
     <header>
         <nav>
-            <img class="logo" src="../assets/img/logo.webp" alt="Logo da pousada" width="90" height="70">
+            <img class="logo" src="../img/logo.webp" alt="Logo da pousada" width="90" height="70">
           <div class="mobile-menu">
             <div class="line1"></div>
             <div class="line2"></div>
             <div class="line3"></div>
           </div>
           <ul class="nav-list">
-            <li><a href="../index.html">Início</a></li>
+            <li><a href="../../index.html">Início</a></li>
             <li><a href="vilaSal.html">Vila Sal </a></li>
             <li><a href="vilaSalBoutique.html">Vila Sal Boutique</a></li>
             <li><a href="sobre.html">Sobre</a></li>
@@ -152,7 +152,7 @@
          <!--Cookies LGPD-->
          <div class="cookies-msg" id="cookies-msg">
             <div class="cokkies-img">
-                <img src="../assets/icons/cookies.webp" alt="imagem de cookie" srcset=""><span>A sua privacidade é muito importante para nós</span>
+                <img src="../icons/cookies.webp" alt="imagem de cookie" srcset=""><span>A sua privacidade é muito importante para nós</span>
             </div>
             <div class="cookies-txt">
             <p>Nós usamos cookies para garantir a melhor experiência no nosso site,
