page vilasal update

--- a/assets/pages/vilaSal.html
+++ b/assets/pages/vilaSal.html
@@ -20,7 +20,7 @@
             <div class="line3"></div>
           </div>
           <ul class="nav-list">
-            <li><a href="../index.html">Início</a></li>
+            <li><a href="../../index.html">Início</a></li>
             <li><a href="vilaSal.html">Vila Sal </a></li>
             <li><a href="vilaSalBoutique.html">Vila Sal Boutique</a></li>
             <li><a href="sobre.html">Sobre</a></li>
@@ -193,7 +193,7 @@
              coletar dados sobre como os visitantes interagem com o nosso site e serviços.
               Ao clicar em "Aceitar", você concorda
              em usarmos todos os cookies para publicidade, análises e suporte. 
-             Para mais informações, leia nossa <a href="../pages/politicas.html"><span>Politicas de Cookies</span></a></p>
+             Para mais informações, leia nossa <a href="./politicas.html"><span>Politicas de Cookies</span></a></p>
         <div class="cookies-btn">
           <button onclick="aceito()">Ok, Entendi</button>
         </div>
