--- a/assets/pages/vilaSalBoutique.html
+++ b/assets/pages/vilaSalBoutique.html
@@ -20,7 +20,7 @@
             <div class="line3"></div>
           </div>
           <ul class="nav-list">
-            <li><a href="/index.html">Início</a></li>
+            <li><a href="../../index.html">Início</a></li>
             <li><a href="vilaSal.html">Vila Sal </a></li>
             <li><a href="vilaSalBoutique.html">Vila Sal Boutique</a></li>
             <li><a href="sobre.html">Sobre</a></li>
@@ -200,7 +200,7 @@
         <footer>
             <div id="Contato">
             <div class="box-footer">
-                <img src="/assets/img/logo.webp" alt="logo" srcset="">
+                <img src="../img/logo.webp" alt="logo" srcset="">
                 
             </div>
             <div class="box-footer">
@@ -214,9 +214,9 @@
             </div>
             <div class="box-footer ">
                 <h4>Siga nas redes sociais</h4><br>
-              <a href="http://"><img src="/assets/icons/facebook.webp" alt="ícone do facebook" srcset=""></a>
-              <a href="http://"><img src="/assets/icons/instagram.webp" alt="ícone do instagram" srcset=""></a>
-              <a href="http://"><img src="/assets/icons/linkedin.webp" alt="ícone do linkedin" srcset=""></a>
+              <a href="http://"><img src="../icons/facebook.webp" alt="ícone do facebook" srcset=""></a>
+              <a href="http://"><img src="../icons/instagram.webp" alt="ícone do instagram" srcset=""></a>
+              <a href="http://"><img src="../icons/linkedin.webp" alt="ícone do linkedin" srcset=""></a>
             </div>
         </div>
         <div id="credits">
@@ -228,7 +228,7 @@
         <!--Cookies LGPD-->
     <div class="cookies-msg" id="cookies-msg">
         <div class="cokkies-img">
-            <img src="/assets/icons/cookies.webp" alt="imagem de cookie" srcset=""><span>A sua privacidade é muito importante para nós</span>
+            <img src="../icons/cookies.webp" alt="imagem de cookie" srcset=""><span>A sua privacidade é muito importante para nós</span>
         </div>
         <div class="cookies-txt">
         <p>Nós usamos cookies para garantir a melhor experiência no nosso site,
@@ -236,7 +236,7 @@
              coletar dados sobre como os visitantes interagem com o nosso site e serviços.
               Ao clicar em "Aceitar", você concorda
              em usarmos todos os cookies para publicidade, análises e suporte. 
-             Para mais informações, leia nossa <a href="/assets/pages/politicas.html"><span>Politicas de Cookies</span></a></p>
+             Para mais informações, leia nossa <a href="../pages/politicas.html"><span>Politicas de Cookies</span></a></p>
         <div class="cookies-btn">
           <button onclick="aceito()">Ok, Entendi</button>
         </div>
@@ -248,13 +248,13 @@
     <div class="gtranslate_wrapper"></div>
 
 
-    <script src="assets/javaScript/botãoWhatsapp.js"></script>
+    <script src="../javaScript/botãoWhatsapp.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script>window.gtranslateSettings = {"default_language":"pt","native_language_names":true,"languages":["pt","es","en"],"wrapper_selector":".gtranslate_wrapper","alt_flags":{"en":"usa","pt":"brazil","es":"colombia"}}</script>
-    <script src="/assets/javaScript/tradução.js" defer></script>
-    <script src="/assets/javaScript/scrollPage.js"></script>
-    <script src="/assets/javaScript/nav.js"></script>
-    <script src="/assets/javaScript/gallery.js"></script>
-    <script src="/assets/javaScript/LGPD.js"></script>
+    <script src="../javaScript/tradução.js" defer></script>
+    <script src="../javaScript/scrollPage.js"></script>
+    <script src="../javaScript/nav.js"></script>
+    <script src="../javaScript/gallery.js"></script>
+    <script src="../javaScript/LGPD.js"></script>
    </body>
 </html>
