--- a/assets/pages/vilaSal.html
+++ b/assets/pages/vilaSal.html
@@ -13,7 +13,7 @@
  </head> 
     <header>
         <nav>
-            <img class="logo" src="../assets/img/logo.webp" alt="Logo da pousada" width="90" height="70">
+            <img class="logo" src="../img/logo.webp" alt="Logo da pousada" width="90" height="70">
           <div class="mobile-menu">
             <div class="line1"></div>
             <div class="line2"></div>
