--- a/assets/pages/vilaSal.html
+++ b/assets/pages/vilaSal.html
@@ -10,6 +10,15 @@
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/responsive.css">
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+ <style>
+    .buttons> button{
+  background: transparent;
+  border: none;
+  font-size: 2rem;
+  color: #202020;
+
+}
+ </style>
  </head> 
     <header>
         <nav>
@@ -76,7 +85,7 @@
                           </div>
                           
                           <div class="buttons">
-                            <button class="button" onclick="mover(-1)"><i class="fas fa-chevron-left"></i></button>
+                            <button class="button" onclick="mover(-1)"><i class="fas fa-chevron-left"></i></button style="color:grey;">
                             <button class="button" onclick="mover(1)"><i class="fas fa-chevron-right"></i></button>
                         </div>
                         <div class="btn-quarto">
