--- a/assets/pages/vilaSalBoutique.html
+++ b/assets/pages/vilaSalBoutique.html
@@ -10,6 +10,15 @@
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/responsive.css">
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+ <style>
+    .buttons> button{
+  background: transparent;
+  border: none;
+  font-size: 2rem;
+  color: #202020;
+
+}
+</style>
  </head> 
     <header>
         <nav>
