--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                         aeroporto – pousada</p>
                 </div>
                 <div class="box-services">
-                    <img src="assets/icons/piscina.webp" alt="ícone de piscina" srcset="">
+                    <img src="./assets/icons/piscina.webp" alt="ícone de piscina" srcset="">
                     <p>Piscina (horário de funcionamento
                         das 09h00 às 21h00)</p>
                 </div>
