--- a/index.html
+++ b/index.html
@@ -151,6 +151,11 @@
    <script async src="https://secured.sirvoy.com/widget/sirvoy.js" data-form-id="aff97f042bd1e0f2"></script>
 
 
+   <!-- Google tag (gtag.js) -->
+   <script async src="https://www.googletagmanager.com/gtag/js?id=G-HDM6MM2C6T"></script>
+   <script src="assets/javaScript/gtag.js"></script>
+
+
 
         <footer>
             <div id="Contato">
